inou/prp/tests/errors/typecheck_eq_string_int.prp
/*
:name: typecheck_eq_string_int
:type: error
:error: same type
*/

// `==` between a string and a non-string is a type error (no implicit
// conversion). Doc: ../docs/docs/pyrope/02-basics.md (int vs string compare).

mut s:string = "hi"
mut b = s == 3
